--- a/templates/appHome.html
+++ b/templates/appHome.html
@@ -1266,7 +1266,7 @@
 
     <div class="col-lg-4 col-md-4 text-center" >
       <div align="center">
-        <div class="circlebox">{{viewed_by_recruiter}}</div>
+        <div class="circlebox">{{viewed_by_recruiter.length}}</div>
         <div class="text-center">(VIEWED)</div>
       </div>
     </div>
