--- a/templates/companyHome.html
+++ b/templates/companyHome.html
@@ -17,7 +17,7 @@
     </div>
 <div style="width:2%;float:left;"></div>
 <div class="box_space">
- <div class="box_inner"  ng-click="go_to_new_folower('suggested')">
+ <div class="box_inner"  ng-click="go_to_new_folower('following')">
    <div class="box1" style="border:4px solid #ffc900;text-align:center;color:#ffc900;">
    <div> <span class="big_text" >{{suggeted_user_for_company_list.length}}</span> Talent Matches</div>
     <div align="center" ><img src="public/images/talentmatch.png" class="icon_size"></div>
@@ -40,7 +40,7 @@
 <div class="box_size" align="center">
    
 <div class="box_space">
-         <div class="box_inner"  >
+         <div class="box_inner"  ng-click="go_to_active_jobs(1)">
            <div class="box1" style="border:4px solid #00b5f8;text-align:center;color:#00b5f8;">
             <div><span class="big_text">{{no_of_new_applicant.no_of_users}}</span> New Applicants</div>
           <div align="center" ><img src="public/images/newapplicant.png" class="icon_size"></div>
