--- a/templates/followingcompany.html
+++ b/templates/followingcompany.html
@@ -228,7 +228,7 @@ td
                             <div class="panel-body">
                                 <div class="col-md-12 panelTop" >	
                                     <div class="col-md-4">	
-                                        <img class="img-responsive" src="upload/{{company.users_profilepic}}" alt="" style="width:120px;"/>
+                                        <img class="img-responsive" src="upload/{{company.profileImage}}" alt="" style="width:120px;"/>
                                     </div>
                                     <div class="col-md-8" style="height: 130px;">	
                                         <h3>{{company.company_name}}</h3>
