--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1364,8 +1364,8 @@ Description:  Profile page
                  
           </div>
         
-          <a target="_blank" ng-href="{{ProfileInfo.users_facebook_link ? ProfileInfo.users_facebook_link:'#!/user/profile//'}}" ><img src="public/images/facebook.png"></a>
-          <a target="_blank" ng-href="{{ProfileInfo.users_twitter_link ? ProfileInfo.users_twitter_link:'#!/user/profile//'}}" ><img src="public/images/twitter.png"></a>
+          <a target="_blank" ng-href="{{ProfileInfo.users_twitter_link ? ProfileInfo.users_twitter_link:'#!/user/profile//'}}" ><img src="public/images/facebook.png"></a>
+          <a target="_blank" ng-href="{{ProfileInfo.users_facebook_link ? ProfileInfo.users_facebook_link:'#!/user/profile//'}}" ><img src="public/images/twitter.png"></a>
           <a target="_blank" ng-href="{{ProfileInfo.users_istagram_link ? ProfileInfo.users_istagram_link:'#!/user/profile//'}}" ><img src="public/images/camera.png"></a>
          <a target="_blank" ng-href="{{ProfileInfo.users_linkedin_link ? ProfileInfo.users_linkedin_link:'#!/user/profile//'}}" > <img src="public/images/linkedin.png"></a>
          <!--<a ng-href="{{ProfileInfo.users_facebook_link ? ProfileInfo.users_facebook_link:'#!/user/profile//'}}" > <img src="public/images/www.png"></a>-->
@@ -2270,7 +2270,7 @@ Description:  Profile page
               </div>
 
             </section>
-            
+             
 <section class="container" ng-if="to_view_type == 'view' && company_user_matching_criteria.length > 0">
   <div class="row backsection" >
     <div class="col-lg-12" style="color:#008cc9"> 
