--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2257,8 +2257,8 @@ Description:  Profile page
                       <div class="amazingcarousel-nav"></div>
                       <div class="amazingcarousel-engine"><a href="http://amazingcarousel.com">jQuery Scroller</a></div>
                     </div>
-                  </div>    -->    
-                   <div style="width:4%;float: right;"  ng-if="to_view_type != 'view'" >
+                  </div>    -->   
+                   <div style="width:4%;float: right;position: relative; z-index: 9999999;"  ng-if="to_view_type != 'view'" >
                     <a href="#!/user/gallery"><img src="public/images/edit2.png" /></a>
                   </div>
          
