History back file list..........

--- a/templates/cultureFit.html
+++ b/templates/cultureFit.html
@@ -35,7 +35,7 @@ Change Log
 				    <div class="col-md-8">
 
 				  		<div class="jumbotron" style="margin-bottom:15%;">
-				  		<div align="right"><a href="#!/user/profile//" style="color:##008cc9" >Back</a></div>
+				  		<div align="right"><a ng-click="historyBack()" style="color:##008cc9" >Back</a></div>
 				       <!-- 	<div ng-show="isSet(1)">				       		  
 				         	 <h3>Job Fit</h3>
 				         	 <div class="alert alert-success" ng-show="displaySuccessMsg">
