--- a/templates/educate.html
+++ b/templates/educate.html
@@ -8,7 +8,7 @@ td , th
  <div style="background-color:#FFF;">
 
 <section class="container content-section text-center">
-<span> <a href="#!/user/profile//" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span>
+<span> <a ng-click="historyBack()" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span>
 <br/>
   <h3 align="center">Manage Education </h3>
   <div class="row">
