--- a/templates/add_users.html
+++ b/templates/add_users.html
@@ -8,7 +8,7 @@ Description:  Add user page
 
   <div class="row">
     <div class="col-lg-12" align="right">
-    <a href="#!/user/profile//" style="color:##008cc9" >Back</a>
+    <a ng-click="historyBack()" style="color:##008cc9;cursor: pointer;" >Back</a>
     </div>
     <div class="col-lg-2"></div>
     <div class="col-lg-8">
