--- a/templates/category.html
+++ b/templates/category.html
@@ -2,7 +2,7 @@
 <div style="background-color:#FFF;">
 
 <section class="container content-section text-center">
-<span> <a href="#!/user/profile//" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span> 
+<span> <a ng-click="historyBack()" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span> 
 <br/>
   <h3 align="center">Manage Employment History </h3>   
 
