--- a/templates/changepsw.html
+++ b/templates/changepsw.html
@@ -5,7 +5,7 @@ Description:  Change password page
 =============================================================================  -->
 
 <section class="container content-section text-center">
-  <h3 align="center">Change Password <span> <a href="#!/user/profile//" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span> </h3>
+  <h3 align="center">Change Password <span> <a ng-click="historyBack()" style="color:##008cc9;float: right;font-size: 12px; cursor: pointer;">Back</a></span> </h3>
 
   <div class="row" align="center">
     <div  class="voca"  style="width: 60%;" >
