--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -33,9 +33,13 @@ Description:  Gallery page
   -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 } 
+ 
+
+  
 </style>
+ 
 <section class="container content-section text-center">
-  <h3 align="center">Manage Gallery <a href="#!/user/profile//" style="color:##008cc9;float: right;font-size: 12px;">Back</a></h3>
+  <h3 align="center">Manage Gallery <a ng-click="historyBack()" style="color:##008cc9;float: right;font-size: 12px;">Back</a></h3>
   <div class="row">
     <div  class="voca">
       <div align="center">
