--- a/templates/industry.html
+++ b/templates/industry.html
@@ -8,7 +8,7 @@ td , th
 <section class="container content-section text-center">
 <div class="row">
 
-<span> <a href="#!/user/profile//" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span><br/>
+<span> <a ng-click="historyBack()" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span><br/>
   <h3 align="center" style="margin:0px;">Manage Industry Experience </h3>
     <div ng-if="userInfo_type == '1' " style="font-size: 16px;" align="center">
     Target Talent - select titles or skills that you generally hire for.
