--- a/templates/job_fit.html
+++ b/templates/job_fit.html
@@ -8,7 +8,7 @@
            <tr>
              <td align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>  
               <td align="center"><h3>Job Fit</h3></td>  
-             <td align="right"> <a href="#!/user/profile" style="color:##008cc9">Back</a></td>            
+             <td align="right"> <a ng-click="historyBack()" style="color:##008cc9">Back</a></td>            
            </tr>
           </table>
         </div>
