--- a/templates/location.html
+++ b/templates/location.html
@@ -1,6 +1,6 @@
  
 <section class="container content-section text-center">
-  <h3 align="center">Where do you have offices?  <span> <a href="#!/user/profile//" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span></h3>
+  <h3 align="center">Where do you have offices?  <span> <a ng-click="historyBack()" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span></h3>
   <div class="row">
         <div class="col-sm-12">
            <div class="panel panel-primary">
@@ -21,7 +21,7 @@
            </div>
         </div>
   </div>
-  <div class="row">     
+  <div class="row">  
     
         <div class="col-sm-4">
            <div class="panel panel-default">
