--- a/templates/postJob.html
+++ b/templates/postJob.html
@@ -190,7 +190,7 @@
 <section class="container content-section text-left"> 
   <div class="container">
   <h3>Post A Job</h3>
-   <div align="right"><a href="#!/user/profile//" style="color:##008cc9" >Back</a></div>
+   <div align="right"><a ng-click="historyBack()" style="color:##008cc9" >Back</a></div>
     <div class="row"> 
         <div  ng-cloak>
         <!-- <form name="jobpostForm" ng-submit="postjob(jobpostForm)" novalidate> -->
