--- a/templates/title_held.html
+++ b/templates/title_held.html
@@ -52,7 +52,7 @@
         
          <div class="col-lg-12">
          <div align="center"> <h3> MANAGE TITLE HELD </h3> </div>
-          <div align="right">  <a href="#!/user/profile//" style="color:##008cc9;">Back</a></div>
+          <div align="right">  <a ng-click="historyBack()" style="color:##008cc9;">Back</a></div>
          <div class="shadowbox_2">
          
        		<!--<div class="shadowbox_botton_2" ng-repeat="titlelist in titlesheld">{{titlelist.title_work_name}}<span style="margin-left:30px; cursor:pointer;" ng-bootbox-confirm="Are you sure you want to delete this?"
