--- a/templates/typeFit.html
+++ b/templates/typeFit.html
@@ -23,7 +23,7 @@
 				    <div class="col-md-8">
 
 				  		<div class="jumbotron" style="margin-bottom:15%;">
-				  		<div align="right"><a href="#!/user/profile//" style="color:##008cc9" >Back</a></div>
+				  		<div align="right"><a ng-click="historyBack()" style="color:##008cc9" >Back</a></div>
 				       	<div ng-show="isSet(2)">				       		  
 				         	 <h3>Job Fit</h3>
 				         	 <div class="alert alert-success" ng-show="displaySuccessMsg">
