--- a/templates/followingcompany.html
+++ b/templates/followingcompany.html
@@ -71,7 +71,7 @@ td
   <div class="row backsection">
   
   
-<div class="col-lg-12">
+<div class="col-lg-12"> 
   <!--<h2>Dynamic Tabs</h2>-->
   <ul class="nav nav-tabs">
     <li id="following_tab" ><a data-toggle="tab" data-target="#following">Following <span  ng-if="show_tab == 'following'"  ng-init="click_on_tab('following_tab', 'following')"></span> </a></li>
@@ -79,7 +79,7 @@ td
     <li id="following_me_tab" ><a data-toggle="tab" data-target="#following_me">Following Me <span  ng-if="show_tab == 'following_me'"  ng-init="click_on_tab('following_me_tab', 'following_me')"></span></a></li>
    
     <li id="notviewed_tab"  ><a data-toggle="tab" data-target="#notviewed"> New  <span  ng-if="show_tab == 'notviewed'"  ng-init="click_on_tab('notviewed_tab', 'notviewed')"></span> </a></li>
-    <li id="viewed_tab"    ><a data-toggle="tab" data-target="#viewed"> Viewed </a></li>
+    <li id="viewed_tab"    ><a data-toggle="tab" data-target="#viewed"> Viewed <span  ng-if="show_tab == 'viewed'"  ng-init="click_on_tab('viewed_tab', 'viewed')"></span> </a></li>
     
   </ul>
 
