--- a/templates/user_job_match.html
+++ b/templates/user_job_match.html
@@ -100,7 +100,7 @@ Your desired criteria does not pop up as often as others, so we don't currently 
                             <div class="panel-body">
                                 <div class="col-md-12 panelTop" >   
                                     <div class="col-md-4">  
-                                        <img class="img-responsive" src="upload/{{jobs.company_logo}}" alt="" style="width:120px;"/>
+                                        <img class="img-responsive" src="upload/{{jobs.picture}}" alt="" style="width:120px;"/>
                                     </div>
                                     <div class="col-md-8" style="height:130px;">    
                                         <span><h5 class="brief"><i>{{jobs.jobpost_title}}</i></h5> </span>
@@ -165,7 +165,7 @@ Your desired criteria does not pop up as often as others, so we don't currently 
                             <div class="panel-body">
                                 <div class="col-md-12 panelTop" >   
                                     <div class="col-md-4">  
-                                        <img class="img-responsive" src="upload/{{jobs.company_logo}}" alt="" style="width:120px;"/>
+                                        <img class="img-responsive" src="upload/{{jobs.picture}}" alt="" style="width:120px;"/>
                                     </div>
                                     <div class="col-md-8" style="height:130px;">    
                                         <span><h5 class="brief"><i>{{jobs.jobpost_title}}</i></h5> </span>
@@ -234,7 +234,7 @@ Your desired criteria does not pop up as often as others, so we don't currently 
                             <div class="panel-body">
                                 <div class="col-md-12 panelTop" >	
                                     <div class="col-md-4">	
-                                        <img class="img-responsive" src="upload/{{jobs.company_logo}}" alt="" style="width:120px;"/>
+                                        <img class="img-responsive" src="upload/{{jobs.picture}}" alt="" style="width:120px;"/>
                                     </div>
                                     <div class="col-md-8" style="height:130px;">	
                                         <span><h5 class="brief"><i>{{jobs.jobpost_title}}</i></h5> </span>
@@ -299,7 +299,7 @@ Your desired criteria does not pop up as often as others, so we don't currently 
                                 <div class="panel-body">
                                     <div class="col-md-12 panelTop" >	
                                         <div class="col-md-4">	
-                                            <img class="img-responsive" src="upload/{{jobs.company_logo}}" alt="" style="width:120px;"/>
+                                            <img class="img-responsive" src="upload/{{jobs.picture}}" alt="" style="width:120px;"/>
                                         </div>
                                         <div class="col-md-8" style="height:130px;">	
                                             <span><h5 class="brief"><i>{{jobs.jobpost_title}}</i></h5> </span>
