--- a/templates/follow_user.html
+++ b/templates/follow_user.html
@@ -76,7 +76,7 @@
                             <div class="panel-body" style="padding:10px 0px!important">
                               <div class="col-md-12 panelTop" > 
                                 <div class="col-md-4">  
-                                  <img class="img-responsive" src="upload/{{users.users_profilepic}}" alt="" style="width:120px;"/>
+                                  <img class="img-responsive" src="{{users.profileImage}}" alt="" style="width:120px;"/>
                                 </div>
                                 <div class="col-md-8" style="height:130px;">  
                                   <h3>{{users.users_firstname}}  {{users.users_lastname}}</h3>
@@ -153,7 +153,7 @@
                               <div class="panel-body" style="padding:10px 0px!important">
                               <div class="col-md-12 panelTop" > 
                                 <div class="col-md-4">  
-                                  <img class="img-responsive" src="upload/{{users.users_profilepic}}" alt="" style="width:120px;"/>
+                                  <img class="img-responsive" src="{{users.profileImage}}" alt="" style="width:120px;"/>
                                 </div>
                                 <div class="col-md-8" style="height:130px;">  
                                   <h3>{{users.users_firstname}}  {{users.users_lastname}}</h3>
